# cellular-automata

./: .gitignore  Cargo.toml  README.md  build.sh
src/: app.rs  lib.rs
src/render/: mod.rs
src/sim/: ca3d.rs  gol.rs  mod.rs  rule30.rs
tests/: explore_rules.rs
web/: index.html  main.js  style.css
web/content/: ca3d.md  gol.md  rule30.md
